--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,26 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #a0aec0;
 }
+
+.editor {
+  min-height: 200px;
+  max-height: 200px;
+  overflow: auto;
+  padding-top: 5px;
+}
+
+.public-DraftEditor-content .public-DraftStyleDefault-block {
+  margin: 0;
+  padding: 0;
+}
+
+.editor-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.rdw-link-modal,
+.rdw-emoji-modal {
+  top: auto !important;
+  bottom: 25px !important;
+}
