chore: show onesignal button

--- a/src/index.css
+++ b/src/index.css
@@ -106,9 +106,9 @@
   padding-right: 0.5em;
 }
 
-.onesignal-bell-launcher-button {
+/* .onesignal-bell-launcher-button {
   display: none !important;
-}
+} */
 
 .comment-editor {
   height: 12rem !important;
