--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
   height: 16px;
 }
 
+@media screen and (max-width: 600px) {
+  ::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+}
+
 /* Track */
 ::-webkit-scrollbar-track {
   border-radius: 100vh;
