--- a/src/components/Remirror/editor.css
+++ b/src/components/Remirror/editor.css
@@ -79,10 +79,10 @@
   padding: 8px 12px;
   background-color: #e8ecf1;
   color: #000;
-  margin: 8px auto;
+  margin: 8px 0;
   min-height: 32px;
   width: 100%;
-  max-width: 600px;
+  max-width: 450px;
   display: flex;
   flex-direction: column;
 }
@@ -94,4 +94,80 @@
   display: flex;
   align-items: center;
   flex: none;
+}
+
+.remirror-image-loader {
+  border-top: none;
+  border-radius: none;
+  border: none;
+  animation: rotate 1s infinite;
+  height: 50px;
+  width: 50px;
+}
+
+.remirror-image-loader:before,
+.remirror-image-loader:after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+}
+.remirror-image-loader:before {
+  animation: ball1 1s infinite;
+  background-color: #cb2025;
+  box-shadow: 30px 0 0 #f8b334;
+  margin-bottom: 10px;
+}
+.remirror-image-loader:after {
+  animation: ball2 1s infinite;
+  background-color: #00a096;
+  box-shadow: 30px 0 0 #97bf0d;
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.8);
+    -moz-transform: rotate(0deg) scale(0.8);
+  }
+  50% {
+    -webkit-transform: rotate(360deg) scale(1.2);
+    -moz-transform: rotate(360deg) scale(1.2);
+  }
+  100% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+    -moz-transform: rotate(720deg) scale(0.8);
+  }
+}
+
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 #f8b334;
+  }
+  50% {
+    box-shadow: 0 0 0 #f8b334;
+    margin-bottom: 0;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #f8b334;
+    margin-bottom: 10px;
+  }
+}
+
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 #97bf0d;
+  }
+  50% {
+    box-shadow: 0 0 0 #97bf0d;
+    margin-top: -20px;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #97bf0d;
+    margin-top: 0;
+  }
 }
