fix: mobile responsive

--- a/src/components/Remirror/editor.css
+++ b/src/components/Remirror/editor.css
@@ -33,6 +33,12 @@
   margin-top: -1rem !important;
 }
 
+@media only screen and (max-width: 600px) {
+  .remirror-editor {
+    width: 80vw !important;
+  }
+}
+
 .readonly-editor .remirror-file-root a:last-child {
   display: none !important;
 }
