--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,12 @@
   min-height: 55vh !important;
 }
 
+@media only screen and (max-height: 900px) {
+  .thread-editor .ProseMirror {
+    min-height: 45vh !important;
+  }
+}
+
 .comment-editor .ProseMirror {
   min-height: 12rem !important;
 }
